--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -26,7 +26,7 @@
   venue_short: "ISMAR-Adjunct 2022"
   location: "Singapore"
   year: 2022
-  image: "loadtable_fea.PNG"
+  image: "loadtable_fea.png"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/9974521"
@@ -48,7 +48,7 @@
   venue: "HCI International 2021"
   location: ""
   year: 2021
-  image: "mr4fea.png"
+  image: "mr4fea.PNG"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-030-77626-8_32"
