--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -17,7 +17,7 @@
   year: 2023
   image: "intvr.png"
   tags:
-    - name: "pdf"
+    - name: "doi"
       url: "https://dl.acm.org/doi/abs/10.1145/3581961.3610373"
 
 - title: "Mixed Reality for Engineering Design Review Using Finite Element Analysis"
