--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  emranpoh
+author: Emran Poh
+year: 2025
 
 # Build settings
 theme: minima
