--- a/_data/news.yml
+++ b/_data/news.yml
@@ -9,54 +9,44 @@ settings:
 
 # News items collection
 news:
-  - id: news-001
-    title: "Launched My New Website"
+  - title: "website is UP!"
     date: 2025-03-09
     category: "Website"
     tags: ["web", "personal", "launch"]
-    featured: true
     image: "path/to/image.jpg"  # Optional
     summary: "Excited to announce the launch of my personal website showcasing my portfolio and achievements."
-    content: |
-      Today marks the official launch of my personal website where I'll be sharing my work, 
-      research, and thoughts. The site features sections for my portfolio, publications, 
-      and this news feed to keep everyone updated on my latest activities.
+    content: ok well here goes my webpage 😄 hello worldddddd
 
-  - id: news-002
-    title: "Presented at Industry Conference"
+  - title: "Presented poster at ISMAR-2023"
     date: 2025-02-15
     category: "Professional"
     tags: ["conference", "speaking", "industry"]
-    featured: false
     image: "path/to/conference-image.jpg"  # Optional
     summary: "Delivered a keynote speech on emerging trends in my field at the annual industry conference."
-    content: |
-      I had the honor of presenting my latest research findings at this year's industry conference.
+    content: I had the honor of presenting my latest research findings at this year's industry conference.
       My talk focused on emerging trends and future directions in the field, and was well-received
       by the audience of industry professionals and academics. The presentation slides are now 
       available on my publications page.
 
-  - id: news-003
-    title: "Published New Research Paper"
-    date: 2025-01-20
-    category: "Research"
-    tags: ["publication", "research", "academic"]
-    featured: true
-    image: "path/to/research-image.jpg"  # Optional
-    summary: "My latest research paper on innovative approaches has been published in a leading journal."
-    content: |
-      I'm pleased to announce that my paper titled "Innovative Approaches to Contemporary Challenges" 
-      has been published in the Journal of Advanced Studies. This work represents months of
-      dedicated research and collaboration with esteemed colleagues. The paper explores novel
-      methodologies that could potentially transform how we address key challenges in our field.
+  # - title: "Published New Research Paper"
+  #   date: 2025-01-20
+  #   category: "Research"
+  #   tags: ["publication", "research", "academic"]
+  #   image: "path/to/research-image.jpg"  # Optional
+  #   summary: "My latest research paper on innovative approaches has been published in a leading journal."
+  #   content: |
+  #     I'm pleased to announce that my paper titled "Innovative Approaches to Contemporary Challenges" 
+  #     has been published in the Journal of Advanced Studies. This work represents months of
+  #     dedicated research and collaboration with esteemed colleagues. The paper explores novel
+  #     methodologies that could potentially transform how we address key challenges in our field.
       
-      You can access the full paper through the link on my publications page.
+  #     You can access the full paper through the link on my publications page.
 
 # You can add as many news items as you want following the same structure
 
 # Optional sections
 upcoming_events:
-  - title: "Guest Lecture at University"
+  - title: "Attending SG HCI Meetup"
     date: 2025-04-15
     location: "University Auditorium"
     description: "Delivering a guest lecture on advanced topics in my field."
