--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,65 +1,93 @@
 - title: "Supporting Artefact Awareness for Partially-Replicated Workspaces"
+  title_short: "Supporting Artefact Awareness"
   authors: "Emran Poh, Anthony Tang, Jeannie Lee, and Shengdong Zhao"
   venue: "2023 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)"
-  venue_short: "ISMAR-ADJ"
+  venue_short: "ISMAR-Adjunct"
   location: "Sydney, Australia"
   year: 2023
+  status: "published"
+  institution: "nus-hci"
   image: "artefact-awareness.png"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/10322229/"
 
 - title: "IntVRsection: Virtual Reality Environment for Evaluating Signalized and Unsignalized Intersection Scenarios"
+  title_short: "IntVRsection"
   authors: "Jeannie Lee, Adriel Yeo, B. Kwok, Z. F. Wong, Emran Poh, and R. Chan"
   venue: "International ACM SIGCHI Conference on Automotive User Interfaces and Interactive Vehicular Applications"
   venue_short: "AutoUI"
   location: "Ingolstadt, Germany"
   year: 2023
+  status: "published"
   image: "intvr.png"
+  institution: "immersification"
   tags:
     - name: "doi"
       url: "https://dl.acm.org/doi/abs/10.1145/3581961.3610373"
 
 - title: "Mixed Reality for Engineering Design Review Using Finite Element Analysis"
+  title_short: "MR4FEA"
   authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
   venue: "2022 IEEE International Symposium on Mixed and Augmented Reality Adjunct (ISMAR-Adjunct)"
-  venue_short: "ISMAR-ADJ"
+  venue_short: "ISMAR-Adjunct"
   location: "Singapore"
   year: 2022
+  status: "published"
   image: "loadtable_fea.png"
+  institution: "immersification"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/9974521"
 
 - title: "Mixed Reality for Mechanical Design and Assembly Planning"
+  title_short: "MR4Assembly"
   authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
   venue: "HCI International 2022–Late Breaking Posters: 24th International Conference on Human-Computer Interaction"
-  venue_short: "HCII"
+  venue_short: "HCI-International"
   location: ""
   year: 2022
+  status: "published"
+  institution: "immersification"
   image: "mr4assembly.jpg"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-031-19679-9_72"
 
 - title: "Mixed Reality Interface for Load Application in Finite Element Analysis"
+  title_short: "MR4FEA-Load"
   authors: "Emran Poh, Kyrin Liong, and Jeannie Lee"
   venue: "Innovations in Social Computing and Digital Transformation, International Conference on Human-Computer Interaction 2021"
-  venue_short: "HCII"
+  venue_short: "HCI-International"
   location: ""
   year: 2021
+  status: "published"
   image: "mr4fea.PNG"
+  institution: "immersification"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-030-77626-8_32"
 
 - title: "Designing with Holograms – A Preliminary Study on Improving Design Visualisation Through Holographic Display"
+  title_short: "Designing with Holograms"
   authors: "Emran Poh, A. Tan, V. Balachandran, Jeannie Lee, and Kyrin Liong"
   venue: "NewRIIS Research Conference (NewRIIS 2021)"
   venue_short: "NewRIIS"
   location: ""
   year: 2021
   image: "newriis.png"
+  institution: "immersification"
   tags:
     - name: "pdf"
       url: "https://irr.singaporetech.edu.sg/articles/conference_contribution/Designing_with_Holograms_A_Preliminary_Study_On_Improving_Design_Visualisation_Through_Holographic_Display/23651547/1/files/41505537.pdf"
+
+- title: "In-Situ Visual Guidance for Software Task Assistance and Learning"
+  title_short: "In-Situ Visual Guidance"
+  authors: "Emran Poh, Hou Yueyue, and Jiannan Li"
+  venue_short: "DIS"
+  venue: "Designing Interactive Systems Conference"
+  location: "Singapore"
+  year: 2025
+  image: "dis.png"
+  status: "submitted"
+  institution: "smu-hai"
