--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -87,6 +87,7 @@
   # subtitle: "NUS-HCI CHciE (Continuing HCI Education) Presentation, NUS School of Computing, NUS"
   image: "mmguide-image.png"
   is-current: true
+  year: Ongoing
   start-year: 2024
   end-year: 2025
   projtype: "research"
