--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -96,7 +96,7 @@
   venue: "Designing Interactive Systems Conference"
   location: "Singapore"
   year: 2025
-  image: "dis.png"
+  image: "mmguide-image.png"
   status: "submitted"
   institution: "smu-hai"
   is-selected: true
