--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
 
 - title: "Emptiness, Isolation, Death, Hope"
   subtitle: "Parallels from Kojima's Death Stranding for Human Connection"
-  image: "ds.png"
+  image: "ds-1.png"
   year: 2024
   start-year: 2024
   end-year: 2024
