--- a/_data/button_groups.yml
+++ b/_data/button_groups.yml
@@ -1,34 +1,43 @@
 projects:
   name: "Projects"
   items:
-    - title: "AI Creativity"
-      url: "/projects/#ai-creativity"
+    - title: "Creative Agency"
+      url: "/projects/cre01"
       icon: "🎨"
     - title: "Death Stranding"
-      url: "/projects/#death-stranding"
+      url: "/projects/gam01"
       icon: "🎮"
+    - title: "XR Ethics"
+      url: "/projects/xr01"
+      icon: "🕶️"
     - title: "Be-Longing"
-      url: "/projects/#be-longing"
+      url: "/projects/art02"
       icon: "✨"
+    - title: "Geylang Drip City"
+      url: "/projects/des01"
+      icon: "🎨"
 
 publications:
   name: "Publications"
   items:
     - title: "Supporting Artefact Awareness"
-      url: "/publications/supporting-artefact-awareness"
+      url: "/publications/art01"
       icon: "👥"
     - title: "Mixed Reality for Engineering Design"
-      url: "/publications/mixed-reality-for-engineering-design"
+      url: "/publications/mr01"
       icon: "🔍"
     - title: "Mixed Reality for Mechanical Design"
-      url: "/publications/mixed-reality-for-mechanical-design"
+      url: "/publications/mr02"
       icon: "⚙️"
     - title: "Mixed Reality Interface for Load Application"
-      url: "/publications/mixed-reality-interface-for-load-application"
+      url: "/publications/mr03"
       icon: "📊"
     - title: "Designing with Holograms"
-      url: "/publications/designing-with-holograms"
+      url: "/publications/hol01"
       icon: "🖼️"
+    - title: "In-Situ Visual Guidance"
+      url: "/publications/vis01"
+      icon: "💡"
 
 research:
   name: "Research"
