--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -10,7 +10,7 @@
   image: "artefact-awareness.png"
   is-selected: true
   emoji: "👥"
-  url: "/publications/supporting-artefact-awareness"
+  url: "/publications/art01"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/10322229/"
@@ -26,7 +26,7 @@
   image: "intvr.png"
   institution: "immersification"
   emoji: "🚗"
-  url: "/publications/intvrsection"
+  url: "/publications/int01"
   tags:
     - name: "doi"
       url: "https://dl.acm.org/doi/abs/10.1145/3581961.3610373"
@@ -43,7 +43,7 @@
   institution: "immersification"
   is-selected: true
   emoji: "🔍"
-  url: "/publications/mixed-reality-for-engineering-design"
+  url: "/publications/mr01"
   tags:
     - name: "pdf"
       url: "https://ieeexplore.ieee.org/abstract/document/9974521"
@@ -59,7 +59,7 @@
   institution: "immersification"
   image: "mr4assembly.jpg"
   emoji: "⚙️"
-  url: "/publications/mixed-reality-for-mechanical-design"
+  url: "/publications/mr02"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-031-19679-9_72"
@@ -75,7 +75,7 @@
   image: "mr4fea.PNG"
   institution: "immersification"
   emoji: "📊"
-  url: "/publications/mixed-reality-interface-for-load-application"
+  url: "/publications/mr03"
   tags:
     - name: "pdf"
       url: "https://link.springer.com/chapter/10.1007/978-3-030-77626-8_32"
@@ -90,7 +90,7 @@
   image: "newriis.png"
   institution: "immersification"
   emoji: "🖼️"
-  url: "/publications/designing-with-holograms"
+  url: "/publications/hol01"
   tags:
     - name: "pdf"
       url: "https://irr.singaporetech.edu.sg/articles/conference_contribution/Designing_with_Holograms_A_Preliminary_Study_On_Improving_Design_Visualisation_Through_Holographic_Display/23651547/1/files/41505537.pdf"
@@ -107,4 +107,4 @@
   institution: "smu-hai"
   is-selected: true
   emoji: "💡"
-  url: "/publications/ai-creativity"
+  url: "/publications/vis01"
